# android-alg

./: README.md
app/: build.gradle
app/src/main/jni/: CMakeLists.txt  extractImpl.cpp  extractImpl.h  general.cpp  general.h  imgpreproc.cpp  imgpreproc.h  imo_define.h  imo_log.h  ndkcamera.cpp  scrfd.cpp  scrfd.h  scrfdncnn.cpp
app/src/main/jniLibs/include/opencv2/core/: bindings_utils.hpp
